test/cherry/Language/tensor_function_return_lowering_error.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn make(): Float32[2] {
  [1.0, 2.0]
}

fn main(): UInt64 {
  0
}

# CHECK: error: Tensor function returns require function memref ABI
